2014-06-18  Miguel de Dios <miguel.dedios@artica.es>
	
	* include/javascript/d3.v3.4.8.js: added the last version of D3.

2014-06-18  Vanessa Gil <vanessa.gil@artica.es>

	* godmode/reporting/visual_console_builder.php: Changed
	default size of the module graphs.

2014-06-18  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* godmode/reporting/visual_console_builder.editor.php:
	Added some buttons, like a control to edit the html code
	of the tinymce's textarea.

	* godmode/reporting/visual_console_builder.editor.js:
	Modified the funtion "hiddenFields" to enable the tinymce's
	code control only if the item is a label.

2014-06-18  Sergio Martin <sergio.martin@artica.es>

	* include/graphs/flot/pandora.flot.js: Fixed position of the
	event information box in flot modules graphs when click on
	events "ball" for ticket: #948

2014-06-17  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* godmode/reporting/visual_console_builder.editor.js:
	Modified the function "loadFieldsFromDB" to fix the graph
	type selection.

	* include/functions_visual_map_editor.php: Visual changes
	on the form created by the function
	"visual_map_editor_print_item_palette".

2014-06-17  Sergio Martin <sergio.martin@artica.es>

	* include/graphs/functions_flot.php: Fix height of the 
	div with events info in graphs

2014-06-17  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* godmode/agentes/module_manager_editor_common.php,
	  operation/reporting/reporting_viewer.php,
	  operation/agentes/status_monitor.php,
	  include/functions_netflow.php,
	  include/functions_graph.php: Improvements to avoid
	php notices and warnings.

	* godmode/setup/setup_visuals.php,
	  include/functions_config.php: Added a new option
	to choose a custom line thickness for the line between
	the items relations of the visual maps.

	* include/functions_visual_map.php,
	  include/javascript/pandora_visual_console.js: Added
	support to the custom line thickness and fixed some