@@ -1,3 +1,7 @@
+2014-06-20  Alejandro Gallardo <alejandro.gallardo@artica.es>
+	
+	* extensions/system_info.php: Improved the user experience.
+
 2014-06-18  Miguel de Dios <miguel.dedios@artica.es>
 	
 	* include/javascript/d3.v3.4.8.js: added the last version of D3.
